@@ -2,7 +2,7 @@
 
                            I N T E R C H A N G E
 
-Interchange 5.0.1
+Interchange 5.0.2
 
 Copyright (C) 2002-2004 Interchange Development Group
 Copyright (C) 1996-2002 Red Hat, Inc.
