@@ -5,6 +5,14 @@
 
 ------------------------------------------------------------------------------
 
+Interchange 5.0.2 released 2005-09-22.
+
+Security
+--------
+
+* Fix ITL injection hole in pages/forum/submit.html.
+
+------------------------------------------------------------------------------
 
 Interchange 5.0.1 released 2004-03-29.
 
